# BeerGUI

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  layout_proto.cpp  setup-emulator.sh
arduino/: setup-arduino.sh
arduino/example/: example.ino
docs/html/: _beer_g_u_i_8h.html  _beer_g_u_i_8h_source.html  _g_l_backend_8cpp_source.html  _g_l_backend_8h_source.html  annotated.html  annotated_dup.js  class_button_component-members.html  class_button_component.html  class_button_component.js  class_component-members.html  class_component.html  class_component.js  class_display.html  class_display_3_01_renderer_3_01_render_backend_01_4_01_4-members.html  class_display_3_01_renderer_3_01_render_backend_01_4_01_4.html  class_g_l_backend-members.html  class_g_l_backend.html  class_g_l_backend.js  class_graphics-members.html  class_graphics.html  class_graphics.js  class_renderer-members.html  class_renderer.html  class_renderer.js  class_slider_component-members.html  class_slider_component.html  class_slider_component.js  class_view.html  class_window-members.html  class_window.html  class_window.js  class_window_manager-members.html  class_window_manager.html  class_window_manager.js  classes.html  component_8cpp_source.html  component_8h_source.html  core_8cpp_source.html  core_8h_source.html  dir_199f00bcd9b0045362f41b6724eab9bb.html  (+34 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_8.js  all_a.js  all_b.js  all_c.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  pages_0.js  searchdata.js
emulator/: CMakeLists.txt  GLBackend.cpp  GLBackend.h  main.cpp
examples/display/: display.ino
src/: BeerGUI.h  CMakeLists.txt  button.cpp  button.h  component.cpp  component.h  core.cpp  core.h  display.h  library.properties  renderer-adafruit.h  renderer.h  slider.cpp  slider.h  view.h  window.cpp  window.h  windowmanager.cpp  windowmanager.h
src/components/: button.h  slider.cpp  slider.h
test/: CMakeLists.txt  main.cpp  renderer-fake.h
